Use more Java 17 idioms in the poi core module
Mechanical, behavior-preserving modernization now that the build
targets Java 17:

- pattern-matching instanceof in place of instanceof-then-cast
- arrow-form switch statements / switch expressions where there is
  no fall-through
- Stream.toList() instead of collect(Collectors.toList()) where the
  resulting list is never mutated

No public API signatures changed.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>